--- a/IOTHubWeb/Web.config
+++ b/IOTHubWeb/Web.config
@@ -12,7 +12,17 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-IOTHub-20180926101842.mdf;Initial Catalog=aspnet-IOTHub-20180926101842;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-IOTHub-20180926101842.mdf;Initial Catalog=aspnet-IOTHub-20180926101842;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DefaultConnection" 
+    connectionString="Data Source=XIVMAIN\XIVSQL;
+    Initial Catalog=DbMigrationExample;Integrated Security=True"
+    providerName="System.Data.SqlClient" />-->
+
+    <add name="ConnectionStringName"
+    providerName="System.Data.SqlClient"
+    connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=DatabaseName;Integrated Security=True;MultipleActiveResultSets=True"/>
+    
+    
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
