--- a/IOTHubWeb/IOTHubWeb.csproj
+++ b/IOTHubWeb/IOTHubWeb.csproj
@@ -269,8 +269,12 @@
     <Compile Include="ViewModels\NodeDetailsViewModels.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\triangle_32.png" />
-    <Content Include="App_Data\triangle_64.png" />
+    <Content Include="Img\IOTHub.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Img\nodes_red.png" />
+    <Content Include="Img\triangle_32.png" />
+    <Content Include="Img\triangle_64.png" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -393,6 +397,7 @@
     <Content Include="Scripts\popper-utils.js.map" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Data\" />
     <Folder Include="Views\Base\" />
     <Folder Include="Views\Node\" />
   </ItemGroup>
